RESOLVED FIXED274296
[WebXR] Rendering is incorrect in on-device HQ capture
https://bugs.webkit.org/show_bug.cgi?id=274296
Summary [WebXR] Rendering is incorrect in on-device HQ capture
Dan Glastonbury
Reported 2024-05-16 21:17:26 PDT
When doing on-device HQ capture of WebXR content the rendering is missing the right eye and the left eye has warping at the edges.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-16 21:17:35 PDT
Dan Glastonbury
Comment 2 2024-05-16 22:17:43 PDT
EWS
Comment 3 2024-05-19 18:22:07 PDT
Committed 278975@main (5b6cb5049aac): <https://commits.webkit.org/278975@main> Reviewed commits have been landed. Closing PR #28695 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.