Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.h
@@ -93,8 +93,9 @@ public:
 
     PlatformXR::LayerHandle handle() const { return m_handle; }
     const WebGLFramebuffer& framebuffer() const { return m_drawFramebuffer.get(); }
-    IntSize displayFramebufferSize() const;
+    // Return the size of the framebuffer is Screen Space
     IntSize drawFramebufferSize() const;
+    // Return the viewport for eye in Screen Space
     IntRect drawViewport(PlatformXR::Eye) const;
 
     void startFrame(const PlatformXR::FrameData::LayerData&);
@@ -120,13 +121,12 @@ private:
     WebGLRenderingContextBase& m_context;
     Attributes m_attributes;
     PlatformXR::Layout m_displayLayout = PlatformXR::Layout::Shared;
-    IntSize m_framebufferSize;
+    IntSize m_framebufferSize; // Physical Space
 #if PLATFORM(COCOA)
-    IntRect m_leftViewport;
-    IntRect m_rightViewport;
-    IntSize m_leftPhysicalSize;
-    IntSize m_rightPhysicalSize;
-    IntSize m_screenSize;
+    IntRect m_leftViewport; // Screen Space
+    IntRect m_rightViewport; // Screen Space
+    IntSize m_leftPhysicalSize; // Physical Space
+    IntSize m_rightPhysicalSize; // Physical Space
 #endif
     WebXRAttachments m_drawAttachments;
     WebXRAttachments m_resolveAttachments;
